--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "simple-git-hooks": "^2.8.0",
     "vscode-langservers-extracted": "^4.2.1"
   },
-
   "lint-staged": {
     "*.js": "npm run format",
     "*.{md,yaml}": "npm run prettier:fix"
@@ -56,6 +55,7 @@
   ],
   "dependencies": {
     "assets": "file:frontend/assets",
+    "markdown-it-attrs": "^4.2.0",
     "markdown-it-container": "^3.0.0"
   }
 }
