--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@11ty/eleventy-navigation": "^0.3.2",
     "dotenv": "^16.0.1",
     "eleventy-sass": "^1.3.1",
+     "markdown-it-eleventy-img": "^0.9.0",
     "markdown-it-attrs": "^4.1.4",
     "markdown-it-container": "^3.0.0",
     "markdown-it-footnote": "^3.0.3",
