--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         if: ${{ true }}
         uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: ./html
+          publish_dir: ../html
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit and push
