--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,9 +33,9 @@
     "@11ty/eleventy-navigation": "^0.3.2",
     "dotenv": "^16.0.1",
     "eleventy-sass": "^1.3.1",
-     "markdown-it-eleventy-img": "^0.9.0",
     "markdown-it-attrs": "^4.1.4",
     "markdown-it-container": "^3.0.0",
+    "markdown-it-eleventy-img": "^0.9.0",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-image-figures": "^2.1.0",
     "sass": "^1.50.0",
@@ -44,6 +44,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "leaflet-textpath": "^1.2.3",
     "markdown-it": "^13.0.1"
   }
