--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,14 +28,15 @@
   },
   "keywords": [],
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "@11ty/eleventy-img": "^2.0.1",
-    "@11ty/eleventy-navigation": "^0.3.2",
+    "@11ty/eleventy": "^3.0.0",
+    "@11ty/eleventy-img": "^4.0.2",
+    "@11ty/eleventy-navigation": "^0.3.5",
+    "@11ty/eleventy-plugin-pug": "^1.0.0",
     "dotenv": "^16.0.1",
     "eleventy-sass": "^1.3.1",
-     "markdown-it-eleventy-img": "^0.9.0",
     "markdown-it-attrs": "^4.1.4",
     "markdown-it-container": "^3.0.0",
+    "markdown-it-eleventy-img": "^0.9.0",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-image-figures": "^2.1.0",
     "sass": "^1.50.0",
@@ -44,6 +45,9 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@11ty/eleventy-upgrade-help": "^3.0.1",
+    "clean": "^4.0.2",
+    "install": "^0.13.0",
     "leaflet-textpath": "^1.2.3",
     "markdown-it": "^13.0.1"
   }
