--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bcc",
   "version": "0.1.0",
+  "type": "module",
   "description": "Brightening the Covenant Chain",
   "homepage": "https://github.com/kingsdigitallab/bcc-11ty/#readme",
   "repository": {
@@ -32,13 +33,12 @@
     "test": "npm run test --workspaces --if-present"
   },
   "devDependencies": {
-    "@11ty/eleventy-img": "^2.0.1",
+
     "@babel/eslint-parser": "^7.18.2",
     "@babel/eslint-plugin": "^7.17.7",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
-    "markdown-it-eleventy-img": "^0.9.0",
-    "markdown-it-front-matter": "^0.2.3",
+
     "prettier": "^2.6.2",
     "prettier-plugin-sort-imports": "^1.7.0",
     "simple-git-hooks": "^2.8.0",
@@ -54,8 +54,8 @@
     "tests"
   ],
   "dependencies": {
-    "assets": "file:frontend/assets",
-    "markdown-it-attrs": "^4.2.0",
-    "markdown-it-container": "^3.0.0"
+
+    "assets": "file:frontend/assets"
+
   }
 }
