--- a/package.json
+++ b/package.json
@@ -33,12 +33,10 @@
     "test": "npm run test --workspaces --if-present"
   },
   "devDependencies": {
-
     "@babel/eslint-parser": "^7.18.2",
     "@babel/eslint-plugin": "^7.17.7",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
-
     "prettier": "^2.6.2",
     "prettier-plugin-sort-imports": "^1.7.0",
     "simple-git-hooks": "^2.8.0",
@@ -54,8 +52,7 @@
     "tests"
   ],
   "dependencies": {
-
+    "@11ty/eleventy-navigation": "^0.3.5",
     "assets": "file:frontend/assets"
-
   }
 }
