--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "d3": "^7.9.0",
+    "fflate": "^0.8.2",
     "leaflet": "^1.9.4",
     "leaflet-dvf": "^0.3.1",
     "leaflet-textpath": "^1.2.3",
